--- a/src/app/dashboard/leads/leads.component.css
+++ b/src/app/dashboard/leads/leads.component.css
@@ -29,6 +29,11 @@
     height: 20px;
 }
 
+.normal {
+    height: 16px;
+    margin-left: 3px;
+}
+
 .table th {
     padding-top: 12px;
     padding-bottom: 12px;
