--- a/src/app/dashboard/leads/leads.component.html
+++ b/src/app/dashboard/leads/leads.component.html
@@ -71,10 +71,10 @@
                 | orderBy: key:reverse
                 | paginate: { itemsPerPage: 50, currentPage: p }
                 ">
-                            <td> <span *ngIf="user.priority == 'Super Hot' else hot"><img class="super-hot" src="\assets\icons\red-flag.png"></span>
-                                <ng-template #hot>
-                                    <img class="super-hot" src="\assets\icons\flag_yellow.png">
-                                </ng-template>
+                            <td>
+                                <span *ngIf="user?.priority == 'Super Hot'"><img class="super-hot" src="\assets\icons\red-flag.png"></span>
+                                <span *ngIf="user?.priority == 'Hot'"><img class="super-hot" src="\assets\icons\flag_yellow.png"></span>
+                                <span *ngIf="user?.priority == 'Normal'"><img class="normal" src="\assets\icons\flag-green2.png"></span>
                             </td>
 
 
@@ -122,8 +122,14 @@
 
                                 <td>{{ user.created | date: "dd/MM/yyyy" }}</td>
                                 <td>
-                                    <span *ngIf="user?.assignedTo[0] === ''">Self</span> {{user?.assignedTo[0]}}
+                                    <span *ngIf="user?.assignedTo?.length === 0">Self</span>
+                                    <span *ngIf="user?.assignedTo?.length > 0">
+                                    <span *ngFor="let assign of user?.assignedTo">{{ assign }}<span>,</span><br></span>
+                                    </span>
                                 </td>
+                                <!-- <td>
+                                    <span *ngIf="user?.assignedTo[0] === ''">Self</span> {{user?.assignedTo[0]}}
+                                </td> -->
                                 <td>
                                     <span><b>Media: </b> {{ user?.media }}</span
                 ><br />
