--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,3 +1,13 @@
+.invalid-feedback {
+    /* display: none; */
+    width: 100%;
+    margin-top: 0.25rem;
+    font-size: 80%;
+    color: #dc3545;
+    transform: translate(33px, 0);
+    border-color: #dc3545;
+}
+
 .updatePassword {
     margin-left: 15px;
     margin-bottom: 14px;
