Some internal changes

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -66,13 +66,13 @@
                             <span>Register</span>
                         </a>
                     </li>
-                    <li class="sidebar">
+                    <!-- <li class="sidebar">
                         <a routerLink="/map">
                             <i class="fas fa-map"></i>
                             <span>Maps</span>
                             <span class="badge badge-pill badge-info">New</span>
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <div class="sidebar-footer">
