location component added

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -60,6 +60,13 @@
                             <span>Assigned Leads</span>
                         </a>
                     </li>
+                    <li class="sidebar">
+                        <a routerLink="/location">
+                            <i class="fas fa-exchange-alt"></i>
+                            <!-- <i class="fas fa-phone-volume"></i> -->
+                            <span>Location</span>
+                        </a>
+                    </li>
                     <li class="sidebar" *ngIf="tokendata?.access  == 'super_admin'">
                         <a routerLink="/register">
                             <i class="fa fa-tachometer-alt"></i>
