--- a/src/app/dashboard/location/location.component.html
+++ b/src/app/dashboard/location/location.component.html
@@ -12,7 +12,7 @@
         <div class="col-9">
             <div class="user-class">
                 <!-- <br> -->
-                <h1><b>Users</b></h1>
+                <h1><b>Location</b></h1>
                 <br>
 
                 <div class="">
@@ -44,65 +44,39 @@
                     <table class="table table-hover">
                         <thead>
                             <tr>
-                                <th (click)="sort('id')" scope="col">User ID <i class="fa fa-sort"></i></th>
-                                <th scope="col">Full Name</th>
-                                <th scope="col">Contact #</th>
-                                <th scope="col">Location Assigned</th>
+                                <th (click)="sort('id')" scope="col">ID <i class="fa fa-sort"></i></th>
+                                <th scope="col">City</th>
+                                <th scope="col">Location</th>
+                                <th scope="col">Sub Locations</th>
+                                <!-- <th scope="col">Location Assigned</th>
                                 <th scope="col">Email Address</th>
                                 <th scope="col">Access</th>
-                                <th scope="col">Created At</th>
+                                <th scope="col">Craeted At</th>-->
                                 <th scope="col">Operations</th>
 
                             </tr>
                         </thead>
 
                         <tbody>
-                            <!-- <td>
-                    <input class="form-control" type="text" [(ngModel)]="data.userId" placeholder="Search">
-                </td>
-                <td>
-                    <input class="form-control" type="text" [(ngModel)]="data.fullname" placeholder="Search">
-                </td>
-                <td>
-                    <input class="form-control" type="text" [(ngModel)]="data.contact" placeholder="Search">
-                </td>
-                <td>
-                    <input class="form-control" type="text" [(ngModel)]="data.location" placeholder="Search">
-                </td>
-                <td>
-                    <input class="form-control" type="text" placeholder="">
-                </td>
-                <td>
-                    <input class="form-control" type="text" placeholder="">
-                </td>
-                <td>
-                    <input class="form-control" type="text" placeholder="">
-                </td>
-                <td>
-                    <i class="fa fa-search icon"></i>
-                </td> -->
 
-                            <tr *ngFor="let user of data | filterlist: selectedOption:refId | orderBy: key: reverse | paginate:{itemsPerPage:10,currentPage:p};">
-                                <!-- | tableFilter06: data.fullname | tableFilter04: data.contact | tableFilter02: data.location | tableFilter: data.userId | filter: general_search"> -->
-                                <td>{{ user?.userId }}</td>
+                            <tr *ngFor="let location of locations | filterlist: selectedOption:refId | orderBy: key: reverse | paginate:{itemsPerPage:50,currentPage:p};">
+                                <td>{{ location?._id }}</td>
+                                <td>{{getCityName(location?.cityId)}}</td>
                                 <td>
-                                    <span *ngIf="user?.fullname">{{ user?.fullname | titlecase }}</span>
-                                    <span *ngIf="!user?.fullname">{{ user?.name | titlecase }}</span>
+                                    <span>{{ location?.location | titlecase }}</span>
                                 </td>
-                                <td>{{ user?.contact }}</td>
-                                <!-- <td>{{ user.location}}</td> -->
+                                <td *ngIf="location?.subLocations else LocationBlock">
 
-                                <td>
-                                    {{user?.city?.city}}<span>&nbsp;&nbsp;</span><br><span class="badge badge-light" *ngFor="let loc of user.location">{{ loc.location }},  </span>
-                                </td>
-                                <td>{{ user?.email }}</td>
-                                <td>{{user?.access | titlecase}}</td>
-                                <td>{{user?.created | date: "dd/MM/yyyy"}}</td>
+                                    <!-- <span *ngFor="su
+                                        blocation of location?.subLocations">{{ sublocation?.subLocation }}</span> -->
+                                    <span *ngFor="let sublocation of location?.subLocations">{{ sublocation?.subLocation }}, </span></td>
+                                <ng-template #LocationBlock>
+                                    {{'N/A'}}
+                                </ng-template>
+                                <td><i class="fa fa-edit icon" (click)="setUser(location)"></i>
+                                    <a (click)="setUser(location)" role="button"></a>
 
-                                <td><i class="fa fa-edit icon" (click)="setUser(user)"></i>
-                                    <a (click)="setUser(user)" role="button"></a>
-
-                                    <i class="fa fa-trash icon" (click)="confirmID(user._id)" data-toggle="modal" data-target="#exampleModal1"></i>
+                                    <i class="fa fa-trash icon" (click)="confirmID(location._id)" data-toggle="modal" data-target="#exampleModal1"></i>
 
                                 </td>
                                 <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
